--- a/CopyApp/KakaoTalk/KakaoTalk/Base.lproj/Main.storyboard
+++ b/CopyApp/KakaoTalk/KakaoTalk/Base.lproj/Main.storyboard
@@ -1,24 +1,119 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--LoginVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="LoginVC" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="PASSWORD" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9Me-d3-8Bg">
+                                <rect key="frame" x="70" y="373" width="235" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="IwU-M5-jqc"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="ID" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qLK-oe-3Dn">
+                                <rect key="frame" x="70" y="323" width="235" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="k88-mG-owO"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="Z6y-nN-Zdt">
+                                <rect key="frame" x="116" y="140" width="143" height="133"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="143" id="A9U-TU-3Wh"/>
+                                    <constraint firstAttribute="height" constant="133" id="Jwl-iS-lDr"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WuM-yq-e6j">
+                                <rect key="frame" x="70" y="463" width="235" height="45"/>
+                                <color key="backgroundColor" name="KakaoBrown"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="Glf-Jk-Lsh"/>
+                                </constraints>
+                                <state key="normal" title="로그인">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="KakaoTalk CopyApp" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fv4-tg-QLu">
+                                <rect key="frame" x="2" y="646.5" width="371" height="13.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="coG-Sn-Sfq">
+                                <rect key="frame" x="70" y="518" width="235" height="45"/>
+                                <color key="backgroundColor" name="KakaoBrown"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="DhE-6y-h0Z"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="45" id="yCH-az-zRB"/>
+                                </constraints>
+                                <state key="normal" title="회원가입">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" name="KakaoYellow"/>
+                        <constraints>
+                            <constraint firstItem="qLK-oe-3Dn" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="70" id="1PK-2j-1Tt"/>
+                            <constraint firstItem="Z6y-nN-Zdt" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="120" id="77f-WJ-D99"/>
+                            <constraint firstItem="9Me-d3-8Bg" firstAttribute="top" secondItem="qLK-oe-3Dn" secondAttribute="bottom" constant="15" id="91X-fv-8C2"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="qLK-oe-3Dn" secondAttribute="trailing" constant="70" id="Ait-qg-Nhu"/>
+                            <constraint firstItem="WuM-yq-e6j" firstAttribute="top" secondItem="9Me-d3-8Bg" secondAttribute="bottom" constant="55" id="CNz-vk-Nvl"/>
+                            <constraint firstItem="WuM-yq-e6j" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="70" id="Cmm-zA-SfB"/>
+                            <constraint firstItem="qLK-oe-3Dn" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="HE2-Gx-Wzg"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="coG-Sn-Sfq" secondAttribute="trailing" constant="70" id="HoG-nw-ncS"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="WuM-yq-e6j" secondAttribute="trailing" constant="70" id="MVB-Sy-qPv"/>
+                            <constraint firstItem="fv4-tg-QLu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="2" id="N2k-wE-kt2"/>
+                            <constraint firstItem="coG-Sn-Sfq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="70" id="NaM-P4-ycI"/>
+                            <constraint firstItem="Z6y-nN-Zdt" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Nwe-bC-lsc"/>
+                            <constraint firstItem="coG-Sn-Sfq" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="SDq-GD-64n"/>
+                            <constraint firstItem="coG-Sn-Sfq" firstAttribute="top" secondItem="WuM-yq-e6j" secondAttribute="bottom" constant="10" id="UCR-Vy-7p1"/>
+                            <constraint firstItem="qLK-oe-3Dn" firstAttribute="top" secondItem="Z6y-nN-Zdt" secondAttribute="bottom" constant="50" id="Vas-R2-RDF"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="9Me-d3-8Bg" secondAttribute="trailing" constant="70" id="X8Y-97-qMj"/>
+                            <constraint firstItem="WuM-yq-e6j" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="isL-Wc-4Hp"/>
+                            <constraint firstItem="9Me-d3-8Bg" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="oCC-VD-Ova"/>
+                            <constraint firstItem="9Me-d3-8Bg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="70" id="qto-00-kSR"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="fv4-tg-QLu" secondAttribute="trailing" constant="2" id="rv3-EV-9JI"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="fv4-tg-QLu" secondAttribute="bottom" constant="7" id="tZX-8j-SYg"/>
+                            <constraint firstItem="fv4-tg-QLu" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="zU2-4K-WSe"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="32.799999999999997" y="32.833583208395808"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Logo" width="197" height="183"/>
+        <namedColor name="KakaoBrown">
+            <color red="0.30196078431372547" green="0.24705882352941178" blue="0.21176470588235294" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="KakaoBrown">
+            <color red="0.30196078430000001" green="0.2470588235" blue="0.21176470589999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="KakaoYellow">
+            <color red="0.9882352941176471" green="0.8901960784313725" blue="0.30196078431372547" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
