--- a/CopyApp/KakaoTalk/KakaoTalk/Base.lproj/Login.storyboard
+++ b/CopyApp/KakaoTalk/KakaoTalk/Base.lproj/Login.storyboard
@@ -49,9 +49,12 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="45" id="Glf-Jk-Lsh"/>
                                 </constraints>
+                                <color key="tintColor" name="KakaoDarkBrown"/>
                                 <state key="normal" title="로그인">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <state key="disabled" title="로그인"/>
+                                <state key="selected" title="로그인"/>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="KakaoTalk CopyApp" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fv4-tg-QLu">
                                 <rect key="frame" x="2" y="646.5" width="371" height="13.5"/>
@@ -69,6 +72,9 @@
                                 <state key="normal" title="회원가입">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <connections>
+                                    <segue destination="qgb-cX-ckx" kind="show" id="7UT-fG-reO"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" name="KakaoYellow"/>
@@ -103,6 +109,21 @@
             </objects>
             <point key="canvasLocation" x="32.799999999999997" y="32.833583208395808"/>
         </scene>
+        <!--RegisterVC-->
+        <scene sceneID="nwD-c7-NbH">
+            <objects>
+                <viewController id="qgb-cX-ckx" customClass="RegisterVC" customModule="KakaoTalk" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="DgY-iT-9Ov">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="mud-JF-0hS"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3zM-5O-wwk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="837.60000000000002" y="32.833583208395808"/>
+        </scene>
     </scenes>
     <resources>
         <image name="Logo" width="197" height="183"/>
@@ -111,6 +132,9 @@
         </namedColor>
         <namedColor name="KakaoBrown">
             <color red="0.30196078430000001" green="0.2470588235" blue="0.21176470589999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="KakaoDarkBrown">
+            <color red="0.26666666666666666" green="0.20784313725490197" blue="0.1803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="KakaoYellow">
             <color red="0.9882352941176471" green="0.8901960784313725" blue="0.30196078431372547" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
