--- a/CopyApp/KakaoTalk/KakaoTalk/Base.lproj/Login.storyboard
+++ b/CopyApp/KakaoTalk/KakaoTalk/Base.lproj/Login.storyboard
@@ -116,7 +116,21 @@
                     <view key="view" contentMode="scaleToFill" id="DgY-iT-9Ov">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NKC-as-pik">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                <items>
+                                    <navigationItem title="Title" id="ye5-Yo-ddI"/>
+                                </items>
+                            </navigationBar>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="NKC-as-pik" firstAttribute="leading" secondItem="mud-JF-0hS" secondAttribute="leading" id="Fr3-kb-YMu"/>
+                            <constraint firstItem="NKC-as-pik" firstAttribute="trailing" secondItem="mud-JF-0hS" secondAttribute="trailing" id="fCZ-1g-TjN"/>
+                            <constraint firstItem="NKC-as-pik" firstAttribute="top" secondItem="DgY-iT-9Ov" secondAttribute="top" id="lxG-tE-TTS"/>
+                            <constraint firstItem="NKC-as-pik" firstAttribute="centerX" secondItem="DgY-iT-9Ov" secondAttribute="centerX" id="vdV-EY-OYR"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="mud-JF-0hS"/>
                     </view>
                 </viewController>
@@ -130,14 +144,11 @@
         <namedColor name="KakaoBrown">
             <color red="0.30196078431372547" green="0.24705882352941178" blue="0.21176470588235294" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <namedColor name="KakaoBrown">
-            <color red="0.30196078430000001" green="0.2470588235" blue="0.21176470589999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
         <namedColor name="KakaoDarkBrown">
             <color red="0.26666666666666666" green="0.20784313725490197" blue="0.1803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="KakaoYellow">
-            <color red="0.9882352941176471" green="0.8901960784313725" blue="0.30196078431372547" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.98431372549019602" green="0.8666666666666667" blue="0.0078431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
