--- a/CopyApp/FaceBook/FaceBook/Base.lproj/LaunchScreen.storyboard
+++ b/CopyApp/FaceBook/FaceBook/Base.lproj/LaunchScreen.storyboard
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -16,13 +17,43 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="FaceBookWhite" translatesAutoresizingMaskIntoConstraints="NO" id="KCV-hV-g1j">
+                                <rect key="frame" x="147.5" y="293.5" width="80" height="80"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="80" id="Y9U-Vh-KCR"/>
+                                    <constraint firstAttribute="width" constant="80" id="hRy-Yh-7ne"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" name="FaceBookBlue"/>
+                        <constraints>
+                            <constraint firstItem="KCV-hV-g1j" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Bh9-kP-bnU"/>
+                            <constraint firstItem="KCV-hV-g1j" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="q0V-GR-UA6"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="searchDisplayController" destination="jq9-TS-7IV" id="iU2-U3-Lwy"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="jq9-TS-7IV">
+                    <connections>
+                        <outlet property="delegate" destination="01J-lp-oVM" id="Vxe-OJ-Frk"/>
+                        <outlet property="searchContentsController" destination="01J-lp-oVM" id="Gpi-hr-fAC"/>
+                        <outlet property="searchResultsDataSource" destination="01J-lp-oVM" id="N4L-mO-h1V"/>
+                        <outlet property="searchResultsDelegate" destination="01J-lp-oVM" id="cHc-Bl-e55"/>
+                    </connections>
+                </searchDisplayController>
             </objects>
             <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="FaceBookWhite" width="256" height="256"/>
+        <namedColor name="FaceBookBlue">
+            <color red="0.25900000333786011" green="0.3449999988079071" blue="0.57999998331069946" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+        </namedColor>
+    </resources>
 </document>
